# deepseek-free

./: README.md  pyproject.toml
.github/workflows/: publish.yml
deepseek/: __init__.py  _http.py  client.py  models.py  pow.py
deepseek/chat/: __init__.py  chat.py
deepseek/common/: __init__.py  common.py
deepseek/exceptions/: __init__.py  exceptions.py
deepseek/files/: __init__.py  files.py
deepseek/models/: __init__.py  models.py
deepseek/pow/: __init__.py  pow.py
deepseek/session/: __init__.py  session.py
