[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepseek-free"
version = "0.1.0"
description = "Unofficial Python client for DeepSeek — supports default & expert models, thinking, and web search."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "addy" }]
requires-python = ">=3.9"
keywords = ["deepseek", "ai", "llm", "chatbot", "deepseek-free"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "numpy>=1.24.0",
    "wasmtime>=28.0.0",
]

[project.urls]
Homepage = "https://github.com/addy/deepseek-free"
Repository = "https://github.com/addy/deepseek-free"

[tool.hatch.build.targets.wheel]
packages = ["deepseek"]

[tool.hatch.build.targets.wheel.force-include]
"deepseek/wasm" = "deepseek/wasm"

[tool.hatch.build.targets.sdist]
include = [
    "deepseek/**",
    "README.md",
    "pyproject.toml",
]
